# global_air_quality_eda

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: dashboard.py  streamlit_app.py
notebooks/: 01_eda.ipynb  01_eda.py
src/: fetch_worldbank.py  process_merge.py  utils.py
tests/: test_utils.py
